--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=xxx
+GITHUB_CLIENT_SECRET=yyy
+GITHUB_CLIENT_REDIRECT_URI=http://laravel-boilerplate.test
