--- a/.env.example
+++ b/.env.example
@@ -47,4 +47,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GITHUB_CLIENT_ID=xxx
 GITHUB_CLIENT_SECRET=yyy
-GITHUB_CLIENT_REDIRECT_URI=http://laravel-boilerplate.test
+GITHUB_CLIENT_REDIRECT_URI=http://www.yourdomain.com/login/github/callback
+
