--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,1 +1,4 @@
-{}
+{
+    "/assets/boilerplate/js/app.js": "/assets/boilerplate/js/app.js",
+    "/assets/boilerplate/css/app.css": "/assets/boilerplate/css/app.css"
+}
