--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Laravel Boilerplate"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
@@ -45,7 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GITHUB_CLIENT_ID=xxx
-GITHUB_CLIENT_SECRET=yyy
-GITHUB_CLIENT_REDIRECT_URI=http://www.yourdomain.com/login/github/callback
+GITHUB_CLIENT_ID=foo
+GITHUB_CLIENT_SECRET=bar
+GITHUB_CLIENT_REDIRECT_URI=http://127.0.0.1:8000/login/github/callback
 
